@@ -37,6 +37,7 @@ Stalker Changes
 * **Update:** **SimpleEntity.description** validation routine doesn't convert
   the input to string anymore, but checks the given description value against
   being a string or unicode instance.
+* **New:** Added **Ticket.summary** field.
 
 0.2.0.rc4
 =========
